Step 6 - Implement Point 2D settings

--- a/templates/point2d_field.html.twig
+++ b/templates/point2d_field.html.twig
@@ -1,3 +1,6 @@
 {% block point2d_field %}
-    ({{ field.value.getX() }}, {{ field.value.getY() }})
+    {{ fieldSettings.format|replace({
+        '%x%': field.value.x,
+        '%y%': field.value.y
+    }) }}
 {% endblock %}
